--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,12 @@
-# Python-generated files
+# Python cache files
 __pycache__/
-*.py[oc]
-build/
-dist/
-wheels/
-*.egg-info
+*.py[cod]
+*.pyo
+*.pyd
+*.pyc
 
 # Virtual environments
-.venv
+.venv/
+.env/
+env/
+venv/
