--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,4 +12,4 @@ dependencies = [
 
 [project.scripts]
 backend = "uvicorn backend.main:app --reload --host 0.0.0.0 --port 8000"
-frontend = "chainlit run frontend/main_chainlit.py --port 8001"
+frontend = "chainlit run frontend/app.py --port 8001"
